@@ -1,10 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.522 2009-05-27 04:35:42 guru Exp $
+	$Id: ChangeLog,v 1.523 2009-05-28 01:42:31 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2009-05-26	pwessel
 	* gmtconvert.c:	With -S, did not report the number of output segments.  Now allows
 				-S~<pattern> which reports segments whose header does NOT contain pattern.
+				Should pattern actually start with ~ we escape it with \~pattern.
 	
 2009-05-25	pwessel
 	* greenspline.c:	Calculation of nz layers were off by one, leaving out the
